--- a/project/templates/authors.html
+++ b/project/templates/authors.html
@@ -18,6 +18,7 @@
             <li>{{ form.password(class='form_input') }}</li>
         </div>
         <p>{{ form.submit(value='Добавить') }}</p>
+        <p>Создайте учетную запись "admin" чтобы получить права администратора</p>
     </form>
 
 <!--    <ul>-->
